# btk_ros2_t1_edu

./: .gitignore  README.md
markdowns/: bilesenler.md  book-plan.md  introduction-to-robotics-system-with-ros2.md  old-kitap.md  practice.md  progress.md  theory.md
markdowns/core-features/: claude-plan-communication.md  communication.md  core-features-plan.md  launch.md
practice_ws/src/benim_arayuzler/: CMakeLists.txt  package.xml
practice_ws/src/benim_arayuzler/msg/: AcilDurum.msg  MotorBilgileri.msg  SensorVerisi.msg
practice_ws/src/benim_arayuzler/srv/: Esik.srv  ToplamaUc.srv
practice_ws/src/deneme1_pkg/: package.xml  setup.cfg  setup.py
practice_ws/src/deneme1_pkg/deneme1_pkg/: a.py  arayuz_deneme.py  arayuz_srv_deneme.py  client_deneme.py  kamp_kontrol.py  kontrolcu.py  motor.py  srv_deneme.py
practice_ws/src/kamp_uygulama/: package.xml  setup.cfg  setup.py
practice_ws/src/kamp_uygulama/kamp_uygulama/: dolas.py
practice_ws/src/uygulama1_pkg/: package.xml  setup.cfg  setup.py
practice_ws/src/uygulama1_pkg/uygulama1_pkg/: gozlemci.py  kontrolcu.py
